tests/snapshots/e2e_test__case_11_a_diff.snap
---
source: tests/e2e_test.rs
expression: "fixture.stager.diff(&[\"config.nix\".to_string()]).unwrap()"
---
config.nix:
  -3:	no newline
  +3:	no newline
  +4:	new line
