tests/snapshots/e2e_test__case_11_d_staged.snap
---
source: tests/e2e_test.rs
expression: fixture.git_diff_cached_all()
---
diff --git a/config.nix b/config.nix
index 7a18057..9bebdf6 100644
--- a/config.nix
+++ b/config.nix
@@ -3 +3 @@ line 2
-old content
\ No newline at end of file
+new content
\ No newline at end of file
